finished overview section, working on trafficlight section

--- a/scss/base/_themes.scss
+++ b/scss/base/_themes.scss
@@ -9,6 +9,9 @@
     --card-text-color: #222b45;
     --card-info-icon-filter: invert(14%) sepia(10%) saturate(2937%) hue-rotate(187deg) brightness(94%) contrast(91%);
     --card-box-shadow: 3px 6px 14px 0 rgba(0,0,0,0.1);
+    --card-banner-background-color: #e6f1f4;
+    --card-search-form-border-color: #e4e9f2;
+    --card-legend-subtitle-text-color: #757575;
     //section
     --section-title-text-color: #222b45;
     //chart
@@ -35,6 +38,9 @@
     --card-text-color: #fff;
     --card-info-icon-filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(116deg) brightness(107%) contrast(104%);
     --card-box-shadow: 3px 6px 14px 0 rgba(0,0,0,0.1);
+    --card-banner-background-color: #2a3b47;
+    --card-search-form-border-color: #79858e;
+    --card-legend-subtitle-text-color: #cacaca;
     //section
     --section-title-text-color: #fff;
     //chart
