--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,3 +13,4 @@
 @import './base/sections/section-overview';
 @import './base/sections/section-dataWorld';
 @import './base/sections/section-analysis';
+@import './base/sections/section-traffic-light'
