--- a/templates/partials/_scripts.hbs
+++ b/templates/partials/_scripts.hbs
@@ -16,6 +16,8 @@
     {{!-- overview --}}
 <script src="/public/js/overview.js"></script>
 
+    {{!-- Traffic light table --}}
+<script src="/public/js/trafficLight.js"></script>
     {{!-- Load Command --}}
 <script src="/public/js/loadData.js"></script>
 
