--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -47,10 +47,7 @@
                 </div>
             </section>
             <section id="traffic-light" class="section">
-                <div class="section__title">רמזור בישובים</div>
-                <div class="section__content">
-                    
-                </div>
+                {{>_trafficLight}}
             </section>
             <section id="health-facilities" class="section">
                 <div class="section__title">מוסדות רפואיים</div>
