--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,9 @@
   --card-text-color: #222b45;
   --card-info-icon-filter: invert(14%) sepia(10%) saturate(2937%) hue-rotate(187deg) brightness(94%) contrast(91%);
   --card-box-shadow: 3px 6px 14px 0 rgba(0,0,0,0.1);
+  --card-banner-background-color: #e6f1f4;
+  --card-search-form-border-color: #e4e9f2;
+  --card-legend-subtitle-text-color: #757575;
   --section-title-text-color: #222b45;
   --chart-text-color: #222b45;
   --chart-menu-border-color: #e4e9f2;
@@ -32,6 +35,9 @@
   --card-text-color: #fff;
   --card-info-icon-filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(116deg) brightness(107%) contrast(104%);
   --card-box-shadow: 3px 6px 14px 0 rgba(0,0,0,0.1);
+  --card-banner-background-color: #2a3b47;
+  --card-search-form-border-color: #79858e;
+  --card-legend-subtitle-text-color: #cacaca;
   --section-title-text-color: #fff;
   --chart-text-color: #fff;
   --chart-menu-border-color: #79858e;
@@ -508,6 +514,97 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
+  overflow: hidden;
+}
+#overview .card-content .overview-data-item {
+  display: flex;
+  align-items: flex-end;
+  flex-wrap: nowrap;
+}
+#overview .card-content .overview-data-item__title {
+  font-size: 0.8rem;
+  margin-inline-end: 16px;
+}
+#overview .card-content .overview-data-item__data {
+  font-size: 1.4rem;
+  font-weight: 700;
+  line-height: 1.25;
+}
+#overview .card-content .overview-data-item__data.small {
+  font-size: 0.8rem;
+  flex-grow: 0 !important;
+  padding: 0 2px;
+}
+
+#overview__dead .card-content {
+  justify-content: flex-start;
+}
+#overview__dead .card-content .overview-data-item__data {
+  margin-top: 8px;
+}
+
+#overview__confirmed .card-content .overview-data-item__title {
+  line-height: 1.25;
+  padding: 0 2px;
+}
+
+#overview__confirmed-precentage .card-content .overview-data-item__title {
+  line-height: 1.25;
+  padding: 0 2px;
+  white-space: nowrap;
+}
+
+#overview__active-ill .card-content {
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+#overview__active-ill .card-content .overview-data-item.wide {
+  width: 100%;
+}
+#overview__active-ill .card-content .overview-data-item.col {
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-end;
+}
+#overview__active-ill .card-content #overview__active-difference {
+  font-size: 0.8rem;
+  padding: 0 2px;
+  direction: ltr;
+}
+#overview__active-ill .card-content #overview__active-difference + .overview-data-item__title {
+  padding: 0 2px;
+  line-height: 1.25;
+}
+
+#overview__severely-ill .card-content {
+  justify-content: flex-start;
+}
+#overview__severely-ill .card-content .overview-circle {
+  display: inline-block;
+  width: 9px;
+  height: 9px;
+  border-radius: 50%;
+  margin-inline-end: 8px;
+}
+#overview__severely-ill .card-content .overview-circle.red {
+  background: #e21d48;
+}
+#overview__severely-ill .card-content .overview-circle.yellow {
+  background: #e6b957;
+}
+#overview__severely-ill .card-content .overview-data-item__title {
+  margin: 0;
+  padding: 0 2px;
+}
+#overview__severely-ill .card-content .overview-data-item__data {
+  padding: 0 2px;
+}
+#overview__severely-ill .card-content #overview__severe-ill {
+  margin-bottom: 6px;
+}
+#overview__severely-ill .card-content #overview__medium-ill {
+  margin-top: 16px;
 }
 
 #data-world .section__content .inline-flex-wrapper {
@@ -831,4 +928,174 @@ body {
 #analysis .section__content .card-content .chart {
   width: 100%;
   height: 100%;
+}
+
+#traffic-light .inline-flex-wrapper .card {
+  flex-grow: 1;
+  justify-content: flex-start;
+  padding: 0;
+}
+#traffic-light .inline-flex-wrapper .card-header {
+  display: flex;
+  padding: 16px 10px 0;
+}
+#traffic-light .inline-flex-wrapper .card-header__text-area {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+}
+#traffic-light .inline-flex-wrapper .card-header__text-area .card-title {
+  display: flex;
+  margin: 0;
+  font-weight: 400;
+}
+#traffic-light .inline-flex-wrapper .card-header__text-area .card-title .card-title__text {
+  margin-left: 10px;
+  font-weight: 700;
+}
+#traffic-light .inline-flex-wrapper .card-header__text-area .card-subtitle {
+  font-size: 12px;
+  font-weight: 700;
+}
+#traffic-light .inline-flex-wrapper .card-header__info-container {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+}
+#traffic-light .inline-flex-wrapper .card-header__info-container .card-header__info {
+  width: fit-content;
+  display: flex;
+  align-items: center;
+  line-height: 1.3em;
+  padding-left: 10px;
+  margin-left: 10px;
+  border-radius: 2px;
+  background: var(--card-banner-background-color);
+}
+#traffic-light .inline-flex-wrapper .card-header__info-container .card-header__info .card-header__info__icon {
+  display: inline-block;
+  width: 0.9rem;
+  height: 0.9rem;
+  font-size: 0.8rem;
+  margin: 5px;
+  background-color: #14212b;
+  color: #fff;
+  opacity: 0.85;
+  text-align: center;
+  line-height: 1.1;
+  border-radius: 50%;
+}
+#traffic-light .inline-flex-wrapper .card-header__info-container .card-header__info .card-header__info__text {
+  font-size: 12px;
+}
+#traffic-light .inline-flex-wrapper .card-header__search {
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+}
+#traffic-light .inline-flex-wrapper .card-header__search .search-form {
+  display: flex;
+  border-radius: 14.5px;
+  border: 1px solid var(--card-search-form-border-color);
+  padding: 4px 15px;
+  max-width: 170px;
+}
+#traffic-light .inline-flex-wrapper .card-header__search .search-form .search-form__icon {
+  position: relative;
+  top: 3px;
+}
+#traffic-light .inline-flex-wrapper .card-header__search .search-form .search-form__icon svg {
+  fill: var(--card-text-color);
+  width: 20px;
+  height: 20px;
+}
+#traffic-light .inline-flex-wrapper .card-header__search .search-form input {
+  color: var(--card-text-color);
+  border: none;
+  box-shadow: none;
+  background-color: transparent;
+  padding: 0 5px;
+  width: 100%;
+  font-size: 1rem;
+  font-family: inherit;
+}
+#traffic-light .inline-flex-wrapper .card-header__search .search-form input::placeholder {
+  color: var(--card-text-color);
+  font-size: 0.8rem;
+}
+#traffic-light .inline-flex-wrapper .card-legend {
+  display: flex;
+  padding: 0 10px;
+}
+#traffic-light .inline-flex-wrapper .card-legend .legend-item {
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+}
+#traffic-light .inline-flex-wrapper .card-legend .legend-item .legend-item__color-box {
+  width: 32px;
+  height: 32px;
+  padding: 5px;
+  margin: 0 6px;
+  display: inline-block;
+  border-radius: 2px;
+}
+#traffic-light .inline-flex-wrapper .card-legend .legend-item .legend-item__color-box.red {
+  background-color: #fa9e8f;
+}
+#traffic-light .inline-flex-wrapper .card-legend .legend-item .legend-item__color-box.orange {
+  background-color: #f2c580;
+}
+#traffic-light .inline-flex-wrapper .card-legend .legend-item .legend-item__color-box.yellow {
+  background-color: #fcfc70;
+}
+#traffic-light .inline-flex-wrapper .card-legend .legend-item .legend-item__color-box.green {
+  background-color: #b8de92;
+}
+#traffic-light .inline-flex-wrapper .card-legend .legend-item .legend-item__text .legend-item__text__title {
+  font-size: 0.9rem;
+  line-height: 1.4rem;
+  white-space: nowrap;
+}
+#traffic-light .inline-flex-wrapper .card-legend .legend-item .legend-item__text .legend-item__text__subtitle {
+  font-size: 0.9rem;
+  font-style: italic;
+  font-weight: 200;
+  line-height: 1.4rem;
+  color: var(--card-legend-subtitle-text-color);
+  white-space: nowrap;
+}
+#traffic-light .inline-flex-wrapper #traffic-light-table {
+  width: 100%;
+  margin: 0;
+  border: none;
+  border-spacing: 0;
+}
+#traffic-light .inline-flex-wrapper #traffic-light-table .table-fixed-head {
+  width: 100%;
+  border: none;
+}
+#traffic-light .inline-flex-wrapper #traffic-light-table .table-fixed-head .table-head-row {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  height: auto;
+}
+#traffic-light .inline-flex-wrapper #traffic-light-table .table-fixed-head .table-head-row th {
+  flex-basis: 0;
+  flex-grow: 1;
+  font-size: 14px;
+  font-weight: 400;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #2a3b47;
+}
+#traffic-light .inline-flex-wrapper #traffic-light-table .table-fixed-head .table-head-row th:first-child {
+  justify-content: flex-start;
+  padding-right: 7px;
+}
+#traffic-light .inline-flex-wrapper #traffic-light-table .table-fixed-head .table-head-row th.dark {
+  background-color: #354047;
 }
