--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -57,6 +57,11 @@
             </section>
         </div>
     </div>
+    <div class="container"> 
+        <div id="loading" class="loading">
+            Loading&#8230;      
+        </div>
+    </div>
     {{>_scripts}}
 </body>
 </html>
