--- a/scss/base/sections/_section-traffic-light.scss
+++ b/scss/base/sections/_section-traffic-light.scss
@@ -3,173 +3,297 @@
         flex-grow: 1;
         justify-content: flex-start;
         padding: 0;
+        min-width: 350px;
     }
-    .card-header{
-        display:flex;
-        padding: 16px 10px 0;
-    }
-    .card-header__text-area{
-        flex-grow: 1;
+    .card-header-legend-container{
         display: flex;
         flex-direction: column;
-        .card-title{
+        .card-header{
             display:flex;
-            margin: 0;
-            font-weight: 400;
-            .card-title__text{
-                margin-left: 10px;
-                font-weight: 700;
-            }
+            padding: 16px 10px 0;
         }
-        .card-subtitle{
-            font-size: 12px;
-            font-weight: 700;
-        }
-    }
-    .card-header__info-container{
-        flex-grow: 1;
-        display:flex;
-        justify-content: center;
-        .card-header__info{
-            width: fit-content;
+        .card-header__text-area{
+            flex-grow: 1;
             display: flex;
-            align-items: center;
-            line-height: 1.3em;
-            padding-left: 10px;
-            margin-left: 10px;
-            border-radius: 2px;
-            background: var(--card-banner-background-color);
-            .card-header__info__icon{
-                display: inline-block;
-                width: 0.9rem;
-                height: 0.9rem;
-                font-size: 0.8rem;
-                margin: 5px;
-                background-color: #14212b;
-                color: #fff;
-                opacity: 0.85;
-                text-align: center;
-                line-height: 1.1;
-                border-radius: 50%;
-    
+            flex-direction: column;
+            .card-title{
+                display:flex;
+                margin: 0;
+                font-weight: 400;
+                .card-title__text{
+                    margin-left: 10px;
+                    font-weight: 700;
+                }
             }
-            .card-header__info__text{
+            .card-subtitle{
                 font-size: 12px;
+                font-weight: 700;
+                @media (max-width: 590px) {
+                    font-size: 10px;
+                }
             }
         }
-    }
-    .card-header__search{
-        flex-grow: 1;
-        display: flex;
-        align-items: center;
-        .search-form{
+        .card-header__info-container{
+            flex-grow: 1;
             display:flex;
-            border-radius: 14.5px;
-            border: 1px solid var(--card-search-form-border-color);
-            padding: 4px 15px;
-            max-width: 170px;
-            .search-form__icon{
-                svg{
-                    fill: var(--card-text-color);
-                    width: 20px;
-                    height: 20px;
-                }
-                position: relative;
-                top: 3px;
-            }
-            input{
-                color: var(--card-text-color);
-                border: none;
-                box-shadow: none;
-                background-color: transparent;
-                padding: 0 5px;
-                width:100%;
-                font-size: 1rem;
-                font-family: inherit;
-                &::placeholder{
-                    color: var(--card-text-color);
+            justify-content: center;
+            .card-header__info{
+                width: fit-content;
+                display: flex;
+                align-items: center;
+                line-height: 1.3em;
+                padding-left: 10px;
+                margin-left: 10px;
+                border-radius: 2px;
+                background: var(--card-banner-background-color);
+                .card-header__info__icon{
+                    display: inline-block;
+                    width: 0.9rem;
+                    height: 0.9rem;
                     font-size: 0.8rem;
+                    margin: 5px;
+                    background-color: #14212b;
+                    color: #fff;
+                    opacity: 0.85;
+                    text-align: center;
+                    line-height: 1.1;
+                    border-radius: 50%;
+        
+                }
+                .card-header__info__text{
+                    font-size: 12px;
                 }
             }
         }
-    }
-    .card-legend{
-        display: flex;
-        padding: 0 10px;
-        .legend-item{
+        .card-header__search{
+            flex-grow: 1;
             display: flex;
             align-items: center;
-            margin-left: 10px;
-            .legend-item__color-box{
-                width: 32px;
-                height: 32px;
-                padding: 5px;
-                margin: 0 6px;
-                display: inline-block;
-                border-radius: 2px;
-                &.red{
-                    background-color: rgb(250,158,143);
+            .search-form{
+                display:flex;
+                border-radius: 14.5px;
+                border: 1px solid var(--card-search-form-border-color);
+                padding: 4px 15px;
+                max-width: 170px;
+                .search-form__icon{
+                    svg{
+                        fill: var(--card-text-color);
+                        width: 20px;
+                        height: 20px;
+                    }
+                    position: relative;
+                    top: 3px;
                 }
-                &.orange{
-                    background-color: rgb(242,197,128);
-                }
-                &.yellow{
-                    background-color: rgb(252,252,112);
-                }
-                &.green{
-                    background-color: rgb(184,222,146);
-                }
-            }
-            .legend-item__text{
-                .legend-item__text__title{
-                    font-size: 0.9rem;
-                    line-height: 1.4rem;
-                    white-space: nowrap;
-                }
-                .legend-item__text__subtitle{
-                    font-size: 0.9rem;
-                    font-style: italic;
-                    font-weight: 200;
-                    line-height: 1.4rem;
-                    color: var(--card-legend-subtitle-text-color);
-                    white-space: nowrap;
+                input{
+                    color: var(--card-text-color);
+                    border: none;
+                    box-shadow: none;
+                    background-color: transparent;
+                    padding: 0 5px;
+                    width:100%;
+                    font-size: 1rem;
+                    font-family: inherit;
+                    &::placeholder{
+                        color: var(--card-text-color);
+                        font-size: 0.8rem;
+                    }
                 }
             }
         }
+        .card-legend{
+            display: flex;
+            padding: 0 10px;
+            .legend-item{
+                display: flex;
+                align-items: center;
+                margin-left: 10px;
+                .legend-item__color-box{
+                    width: 32px;
+                    height: 32px;
+                    padding: 5px;
+                    margin: 0 6px;
+                    display: inline-block;
+                    border-radius: 2px;
+                    
+                    @media (max-width: 590px) {
+                        width: 26px;
+                        height: 26px;
+                    }
+                }
+                .legend-item__text{
+                    font-size: 0.9rem;
+                    line-height: 1.4rem;
+                    white-space: nowrap;
+                    .legend-item__text__subtitle{
+                        font-style: italic;
+                        font-weight: 200;
+                        color: var(--card-legend-subtitle-text-color);
+                    }
+                    @media (max-width: 590px) {
+                        font-size: 13px;
+                    }
+                }
+            }
+        }
+        @media (max-width:590px) {
+            flex-direction: row;
+            .card-header{
+                flex-direction: column;
+            }
+            .card-legend{
+                flex-direction: column;
+            }
+        }
     }
+    
     #traffic-light-table{
         width: 100%;
+        height: 245px;
         margin: 0;
         border: none;
         border-spacing: 0;
+        display: flex;
+        flex-direction: column;
+        overflow-y: hidden;
         .table-fixed-head{
             width:100%;
             border: none;
+            height: auto;
             .table-head-row{
                 width:100%;
                 display:flex;
                 flex-direction: row;
-                height: auto;
                 th{
                     flex-basis: 0;
                     flex-grow: 1;
-                    font-size: 14px;
+                    font-size: 1rem;
                     font-weight: 400;
                     text-align: center;
                     display: flex;
                     justify-content: center;
                     align-items: center;
-                    background-color: #2a3b47;
+                    background-color: var(--table-header-background);
                     &:first-child{
                         justify-content: flex-start;
                         padding-right: 7px;
                     }
                     &.dark{
-                        background-color: #354047;
+                        background-color: var(--table-header-dark-background);
+                    }
+                    button{
+                        background: transparent;
+                        border: none;
+                        padding: 0 5px;
+                        display: flex;
+                        align-items: center;
+                        font-size: inherit;
+                        font-weight: inherit;
+                        line-height: inherit;
+                        color: inherit;
+                        cursor: pointer;
+                        font-family: var(--text-font-family);
+                        .sort-direction-icon{
+                            display: none;
+                            padding: 5px;
+                            img{
+                                width: 10px;
+                                height:7px;
+                                &.ascending{
+                                    transform: rotateZ(180deg);
+                                }
+                            }
+                            &.show{
+                                display: flex;
+                            }
+                            
+                        }
+                    }
+                    @media (max-width: 590px) {
+                        font-size: 11px;
                     }
                 }
             }
         }
-        
+        .table-content{
+            flex-grow: 1;
+            display: block;
+            width: 100%;
+            direction: ltr;
+        }
+        .table-row{
+            display: flex;
+            // direction: rtl;
+            flex-direction: row-reverse;
+            width: 100%;
+            .table-row-item-container{
+                flex-basis: 0;
+                flex-grow: 1;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                .city-name{
+                    word-wrap: break-word;
+                    word-break: break-word;
+                    display: inline-block;
+                }
+                &.dark{
+                    background-color: var(--table-cell-dark-background);
+                }
+                &.right{
+                    justify-content: flex-end;
+                    font-weight: 700;
+                }
+                .grade-box{
+                    width: 20px;
+                    height: 20px;
+                    margin: 5.5px 0;
+                    border-radius: 2px;
+                    padding: 2px 4px
+                }
+                .daily-grade-box{
+                    width: 28px;
+                    padding: 2px 4px;
+                    border-radius: 2px;
+                    text-align: center;
+                    color: #2c2c2c;
+                    font-weight: 700;
+                    font-size: 14px;
+                    @media (max-width: 590px) {
+                        font-size: 11px;
+                    }
+                }
+            }
+            border-bottom: 1px solid #fff;
+            &:last-child{
+                border: none;
+            }
+            @media (max-width: 690px) {
+                padding-right: 7px;
+            }
+            @media (max-width: 590px) {
+                font-size: 11px;
+            } 
+        }
+        @media (max-width: 738px) {
+            height: 228px
+        }
+        @media (max-width: 590px) {
+            height: 171px;
+        }
     }
+}
+
+
+
+.red{
+    background-color: rgb(250,158,143);
+}
+.orange{
+    background-color: rgb(242,197,128);
+}
+.yellow{
+    background-color: rgb(252,252,112);
+}
+.green{
+    background-color: rgb(184,222,146);
 }
