--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,5 @@
 @import './base/themes';
+@import './base/spinner.scss';
 @import './base/settings';
 @import './base/scrollbar';
 @import './base/containers';
