--- a/templates/partials/_scripts.hbs
+++ b/templates/partials/_scripts.hbs
@@ -3,8 +3,10 @@
 {{!-- On load scripts --}}
 <script src="/public/js/switchTheme.js"></script>
 <script src="/public/js/hamburgerMenu.js"></script>
-<script src="/public/js/navbarLinks.js"></script>
+<script src="/public/js/navbar.js"></script>
 <script src="https://code.highcharts.com/highcharts.js"></script>
+<script src="https://code.highcharts.com/modules/data.js"></script>
+{{!-- <script src="https://code.highcharts.com/modules/exporting.js"></script> --}}
 
 {{!-- Post load scripts --}}
     {{!-- Analysis charts --}}
